# limen

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  Observability.md  README.md  SECURITY.md  WORKSPACE
.github/: Dockerfile.ci
.github/scripts/: run-bazel-in-docker.sh
.github/workflows/: build-test.yml  coverage.yml  sanitizers.yml  static-analysis.yml
design/: architecture.md
examples/: BUILD.bazel  quickstart.cc
include/limen/: abstract_limit.h  abstract_limiter.h  abstract_partitioned_limiter.h  average_sample_window.h  blocking_limiter.h  codel_filter.h  exp_avg_measurement.h  fixed_limit.h  gradient2_limit.h  lifo_blocking_limiter.h  limit.h  limiter.h  measurement.h  minimum_measurement.h  partition.h  percentile_sample_window.h  sample_window.h  settable_limit.h  simple_limiter.h  single_measurement.h  tracing_limit_decorator.h  windowed_limit.h
src/: abstract_limit.cc  abstract_limiter.cc  abstract_partitioned_limiter.cc  average_sample_window.cc  blocking_limiter.cc  codel_filter.cc  exp_avg_measurement.cc  gradient2_limit.cc  lifo_blocking_limiter.cc  percentile_sample_window.cc  simple_limiter.cc  tracing_limit_decorator.cc  windowed_limit.cc
test/: abstract_limiter_test.cc  abstract_partitioned_limiter_test.cc  average_sample_window_test.cc  blocking_limiter_test.cc  codel_filter_test.cc  exp_avg_measurement_test.cc  fixed_limit_test.cc  gradient2_limit_test.cc  lifo_blocking_limiter_test.cc  minimum_measurement_test.cc  observability_e2e_test.cc  percentile_sample_window_test.cc  settable_limit_test.cc  simple_limiter_test.cc  single_measurement_test.cc  tracing_limit_decorator_test.cc  traffic_simulation_test.cc  windowed_limit_test.cc
