# Top-level Bazel package for Limen.
#
# `//:limen` is the core library — algorithms, limiters, measurements,
# and observability wiring, with no gRPC dependency. The gRPC adapter
# lands in commit 9 as a separate `//:limen_grpc` target.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "limen",
    srcs = [
        "src/abstract_limit.cc",
        "src/abstract_limiter.cc",
        "src/average_sample_window.cc",
        "src/exp_avg_measurement.cc",
        "src/gradient2_limit.cc",
        "src/percentile_sample_window.cc",
        "src/simple_limiter.cc",
        "src/tracing_limit_decorator.cc",
        "src/windowed_limit.cc",
    ],
    hdrs = [
        "include/limen/abstract_limit.h",
        "include/limen/abstract_limiter.h",
        "include/limen/average_sample_window.h",
        "include/limen/exp_avg_measurement.h",
        "include/limen/fixed_limit.h",
        "include/limen/gradient2_limit.h",
        "include/limen/limit.h",
        "include/limen/limiter.h",
        "include/limen/measurement.h",
        "include/limen/minimum_measurement.h",
        "include/limen/percentile_sample_window.h",
        "include/limen/sample_window.h",
        "include/limen/settable_limit.h",
        "include/limen/simple_limiter.h",
        "include/limen/single_measurement.h",
        "include/limen/tracing_limit_decorator.h",
        "include/limen/windowed_limit.h",
    ],
    strip_include_prefix = "include",
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/synchronization",
        "@opentelemetry-cpp//api",
        "@opentelemetry-cpp//sdk/src/metrics",
    ],
)

cc_test(
    name = "fixed_limit_test",
    srcs = ["test/fixed_limit_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "settable_limit_test",
    srcs = ["test/settable_limit_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "exp_avg_measurement_test",
    srcs = ["test/exp_avg_measurement_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "minimum_measurement_test",
    srcs = ["test/minimum_measurement_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "single_measurement_test",
    srcs = ["test/single_measurement_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "gradient2_limit_test",
    srcs = ["test/gradient2_limit_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
        "@opentelemetry-cpp//sdk/src/metrics",
    ],
)

cc_test(
    name = "average_sample_window_test",
    srcs = ["test/average_sample_window_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "percentile_sample_window_test",
    srcs = ["test/percentile_sample_window_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "windowed_limit_test",
    srcs = ["test/windowed_limit_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tracing_limit_decorator_test",
    srcs = ["test/tracing_limit_decorator_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "abstract_limiter_test",
    srcs = ["test/abstract_limiter_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
        "@opentelemetry-cpp//sdk/src/metrics",
    ],
)

cc_test(
    name = "simple_limiter_test",
    srcs = ["test/simple_limiter_test.cc"],
    deps = [
        ":limen",
        "@googletest//:gtest_main",
    ],
)
